UI and API default ports

--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,10 @@ NEO4J_TAG=3.5.11
 # NEO4J_TAG=3.5.7
 # NEO4J_TAG=3.5.6
 
+### --- API ---
+GRAPHQL_LISTEN_PORT=4001
+
+### --- UI ---
+UI_LISTEN_PORT=3000
+
+
