--- a/ui/package.json
+++ b/ui/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "grand-stack-starter-ui",
+  "name": "graph-people-analytics-ui",
   "version": "0.0.1",
-  "description": "UI app for GRANDstack",
+  "description": "People Analytics UI app, based on GRANDstack stater",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.2",
     "@material-ui/core": "^4.2.1",
