--- a/api/package.json
+++ b/api/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "graph-people-analytics-api",
+  "name": "grand-stack-starter-api",
   "version": "0.0.1",
-  "description": "People Analytics API app, based on GRANDstack starter",
+  "description": "API app for GRANDstack",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "./node_modules/.bin/nodemon --watch src --ext js,graphql --exec babel-node  src/index.js",
-    "build": "babel src -d build; cp .env build; cp src/schema.graphql build",
-    "now-build": "babel src -d build; cp .env build; cp src/schema.graphql build",
+    "build": "babel src -d build && shx cp .env build && shx cp src/schema.graphql build",
+    "now-build": "babel src -d build && shx cp .env build && shx cp src/schema.graphql build",
     "start": "npm run build && node build/index.js",
     "seedDb": "./node_modules/.bin/babel-node src/seed/seed-db.js"
   },
@@ -20,18 +20,19 @@
     "apollo-link-http": "^1.5.15",
     "apollo-server": "^2.8.2",
     "dotenv": "^7.0.0",
+    "graphql-scalars": "^1.0.7",
     "graphql-tag": "^2.10.1",
-    "neo4j-driver": "^1.7.5",
-    "neo4j-graphql-js": "^2.7.1",
+    "neo4j-driver": "^4.0.1",
+    "neo4j-graphql-js": "^2.12.1",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "braces": ">=2.3.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.2.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "shx": "^0.3.2"
   },
   "husky": {
     "hooks": {
